# BaseGraphGeometry

./: CMakeLists.txt  README.md  pyproject.toml
cmake/: BaseGraphGeometryConfig.cmake.in
include/BaseGraph/extensions/geometry/: metrics.hpp
python/: CMakeLists.txt  pybind.cpp
tests/: CMakeLists.txt  fixtures.hpp  test_metrics.cpp
